<resources>
    <string name="app_name">EvenTually</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_fact_example">Am Ende sind es oft die kleinen Dinge, die in einer Beziehung den größten Unterschied machen.</string>
    <string name="love_facts_title">Wusstest du schon?</string>
    <string name="love_facts_error">Keine Love Facts gefunden</string>
    <string name="home">Home</string>
    <string name="recommendations">Recommendations</string>
    <string name="settings">Settings</string>
    <string name="recs">Recs</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="profile_example">Profile Example</string>
    <string name="settings_profile_title">Profile</string>
    <string name="settings_partner_title">Partner</string>
    <string name="settings_events_title">Events</string>
    <string name="settings_reminder_title">Reminder</string>
    <string name="settings_recs_title">Recs</string>
    <string name="settings_design_title">Darkmode</string>
    <string name="settings_weather_title">Weather</string>
    <string name="settings_activities_title">Activities</string>
    <string name="name">name :</string>
    <string name="age">age :</string>
    <string name="gender">gender :</string>
    <string name="save">Save</string>
    <string name="edit">edit</string>
    <string name="name_profile">Name :</string>
    <string name="age_profile">Alter :</string>
    <string name="geschlecht">Geschlecht :</string>
    <string name="profile_title">Profile</string>
    <string name="underlined_text"><u>Alle ansehen</u></string>
    <string name="karten_tite">Karten:</string>
    <string name="geschenke_title">Geschenke:</string>
    <string name="unternehmungen_title">Unternehmungen:</string>
    <string name="vorschl_ge_title">Vorschläge:</string>
    <string name="restaurant_xy">Restaurant XY</string>
    <string name="ge_ffnet">geöffnet</string>
    <string name="italienisch">italienisch</string>
    <string name="rating_preview">0,0</string>
    <string name="news_header">News Header</string>
    <string name="news_text_in_here">News Text in here.</string>
    <string name="min">min. %.1f °C</string>
    <string name="max">max. %.1f °C</string>
    <string name="rain_percent">Regen %d%%</string>
    <string name="countdown_format">%1$dD %2$dH %3$dM %4$dS</string>
    <string name="countdown_end">Countdown beendet!</string>
    <string name="sign_in">Sign in</string>
    <string name="register">register</string>
    <string name="anmelden">anmelden</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="logout">logout</string>
    <string name="login">login</string>
    <string name="reset_password">reset Password</string>
    <string name="name_hint">Name</string>
    <string name="likes">Likes</string>
    <string name="food_preferences">Food Preferences</string>
    <string name="activity_preferences">Activity Preferences</string>
    <string name="restaurants">Restaurants:</string>
    <string name="jahrestag">Jahrestag</string>
    <string name="_1_tag_vor_jahrestag">1 Tag vor Jahrestag</string>
    <string name="_3_tage_vor_jahrestag">3 Tage vor Jahrestag</string>
    <string name="_5_tage_vor_jahrestag">5 Tage vor Jahrestag</string>
    <string name="_7_tage_vor_jahrestag">7 Tage vor Jahrestag</string>
    <string name="j_hrliche_erinnerung">Jährliche Erinnerung</string>
    <string name="monatliche_erinnerung">Monatliche Erinnerung</string>
    <string name="wann_alles_begann">Wann alles begann:</string>
    <string name="euer_jahrestag">Euer Jahrestag</string>
    <string name="wann_alles_begann_two">Wann alles begann:</string>
    <string name="activities_fragment">Activities Fragment</string>
    <string name="design_fragment">Design Fragment</string>
    <string name="countdown">Countdown</string>
    <string name="so_lange_seid_ihr_schon_zusammen">So lange seid ihr schon zusammen:</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="textview">TextView</string>
    <string name="vorlieben">Vorlieben :</string>
    <string name="lieblingsessen">Lieblingsessen :</string>
    <string name="aktivit_ten">Aktivitäten :</string>
    <string name="recs_fragment">Recs Fragment</string>
    <string name="e_mail_adress">e-mail adress</string>
    <string name="password">password</string>
    <string name="countdown_dots">Countdown:</string>
    <string name="xxd_xxh_xxm_xxs_xxd_xxh_xxm_xxs_xxd_xxh_xxm_xxs">XXD XXH XXM XXS XXD XXH XXM XXS XXD XXH XXM XXS</string>
    <string name="anniversary">Anniversary</string>
    <string name="wetter">Wetter :</string>
    <string name="min_xx_grad">min. XX grad</string>
    <string name="max_xx_grad">max. XX grad</string>
    <string name="regen_xx">regen XX%</string>
    <string name="karte_zum_jahrestag_und_zum_jubil_ium">Karte zum Jahrestag und zum Jubiläium</string>
    <string name="eur">EUR</string>
    <string name="_111_11">111,11</string>
    <string name="default_title">Default Title</string>
    <string name="zeit_ausw_hlen">Zeit auswählen</string>
    <string name="uhrzeit">Uhrzeit:</string>
    <string name="greeting_cards_title">Grußkarten:</string>
    <string name="res_title_settings">Empfehlungseinstellung</string>
    <string name="distance_in_km">Entfernung: %d km</string>
    <string name="go_to">Gehe zu</string>
    <string name="title">Title</string>
    <string name="default_description_text">default description text</string>
    <string name="weather_home_fragment">Wetter am %s :</string>
    <string name="e_mail">e-mail</string>
</resources>